<?xml version="1.0"?>
<package format="2">
  <name>realsense_camera</name>
  <version>1.8.1</version>
  <description>RealSense Camera package allowing access to Intel 3D cameras and advanced modules</description>

  <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>
  <maintainer email="itay.carpis@intel.com">Itay Carpis</maintainer>

  <license>BSD 3-clause. See license attached</license>

  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="rajvi.jingar@intel.com">Rajvi Jingar</author>
  <author email="reagan.lopez@intel.com">Reagan Lopez</author>
  <author email="matthew.k.hansen@intel.com">Matt Hansen</author>
  <author email="mark.d.horn@intel.com">Mark Horn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>boost</depend>

  <exec_depend>rgbd_launch</exec_depend>

  <build_depend version_gte="1.12.1">librealsense</build_depend>
  <build_export_depend>librealsense</build_export_depend>
  <exec_depend>librealsense</exec_depend>

  <build_depend>roslint</build_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
