<?xml version="1.0"?>
<package format="2">
  <name>realsense_navigation</name>
  <version>1.1.0</version>
  <description>RealSense Camera navigation package allowing use of Intel 3D cameras with the navigation stack</description>

  <maintainer email="matthew.c.curfman@intel.com">Matt Curfman</maintainer>
  <maintainer email="mark.d.horn@intel.com">Mark Horn</maintainer>

  <license>BSD 3-clause. See license attached</license>

  <url type="website">http://www.ros.org/wiki/RealSense</url>

  <author email="amit.moran@intel.com">Amit Moran</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>realsense_camera</exec_depend>
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>turtlebot_navigation</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
</package>
